--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+#pycharm ide
+.idea/
+
